方向性工厂模型 修复了以太流冲入建筑高度外导致的错误判断